--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,9 @@ body {
 
 /* Stylisation de l'en-tête */
 header {
-    background-color: #20000093;
+    background-color: #200000;
     color: white;
-    text-align: center;
     padding: 20px 0;
-}
-
-/* Stylisation des liens de navigation */
-nav {
-    text-align: center;
-    margin-top: 10px;
 }
 
 nav a {
@@ -28,7 +21,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #761927; /* Couleur au survol */
+    color: #76042a; /* Couleur au survol */
 }
 
 /* Stylisation des sections */
@@ -37,17 +30,61 @@ section {
     margin: 20px;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(171, 93, 93, 0.1);
+}
+/* Style pour la section "work" */
+#work {
+    padding: 30px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    margin: 20px;
 }
 
+#work h2 {
+    color: #76042a;
+    font-size: 28px;
+    margin-bottom: 20px;
+}
+
+/* Style pour chaque élément à l'intérieur de la section */
+#work div {
+    margin-bottom: 50px; /* Espacement entre chaque élément */
+    text-align : center ;
+}
+
+#work a {
+    margin-bottom: 30px;
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    font-weight: bold;
+}
+#work a:hover {
+    color: #ff5733; /* Changement de couleur au survol */
+}
+
+
+#work img {
+    width: 200px; /* Fixe la taille des images */
+    height: auto;
+    border-radius: 8px; /* Coins arrondis */
+}
+/* Style pour les descriptions */
+#work p {
+    margin-top: 10px;
+    font-size: 14px;
+    color: #555;
+}
+.work-item {
+    display: inline-block;
+    inline-size: 360px;
+}
 h2 {
-    color: #761036;
+    color: #76042a;
+
 }
 
 /* Stylisation du formulaire de contact */
 form {
-    display: flex;
-    flex-direction: column;
     width: 300px;
     margin: 0 auto;
 }
@@ -70,7 +107,6 @@ form button {
     color: white;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
 }
 
 form button:hover {
@@ -79,7 +115,6 @@ form button:hover {
 
 /* Stylisation du pied de page */
 footer {
-    text-align: center;
     padding: 20px;
     background-color: #200000;
     color: white;
